@startuml
class Usuario {
    + id : int
    + name : String
    + email: String
    + ativo : boolean
    + ListaCursosInscritos: list
}

class Aluno {
}

class Professor {
    + instituiçãoNome: String
    + instituiçãoID: int
    + ListaCursosMinistrados: list
}

Usuario <|-- Aluno
Usuario <|-- Professor
@enduml

